--- a/resources/sass/components/button.scss
+++ b/resources/sass/components/button.scss
@@ -2,7 +2,7 @@
     @apply bg-button no-underline rounded-lg text-sm py-2 px-5;
     color: white;
 
-    &.is-outlined{
+    &.is-outlined {
         @apply bg-card border border-accent text-accent;
     }
 
@@ -12,5 +12,29 @@
 
     .theme-dark & {
         box-shadow: 0 2px 7px 0 #00658b;
+    }
+}
+
+.login-btn {
+    padding: 8px 32px;
+    margin: 10px;
+    border: 1px solid #e1dddd80;
+    border-radius: 6px;
+    cursor: pointer;
+    background-color: #e9e9e9;
+
+    &:hover {
+        background-color: #cecece80;
+    }
+}
+
+.register-btn {
+    padding: 8px 32px;
+    background-color: #5ebbff;
+    border-radius: 6px;
+    border: 1px solid #5ebbff;
+    cursor: pointer;
+    &:hover {
+        background-color: #42acf7;
     }
 }
